# voice-recorder-cli

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: cli.yml
docs/: max_duration_formula.txt
src/voice_recorder/: __init__.py  cli.py  recorder.py
src/voice_recorder/backend/: scipy_back.py  soundfile_back.py  wavio_back.py
tests/: test.py
